WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72655
[Chromium] Layout test does not return correct misspelling positions if there are multiple misspelled words.
https://bugs.webkit.org/show_bug.cgi?id=72655
Summary
[Chromium] Layout test does not return correct misspelling positions if there...
Shinya Kawanaka
Reported
2011-11-17 14:19:53 PST
The calculation of 'offset' in WebViewHost::finishLastTextCheck() is wrong. Thanks to this bug, the positions of misspelling words except the first one are wrong.
Attachments
Patch
(5.96 KB, patch)
2011-11-17 14:25 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(5.96 KB, patch)
2011-11-17 14:27 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2011-11-17 14:20:12 PST
I'm writing CL now.
Shinya Kawanaka
Comment 2
2011-11-17 14:25:20 PST
Created
attachment 115680
[details]
Patch
Shinya Kawanaka
Comment 3
2011-11-17 14:27:30 PST
Created
attachment 115682
[details]
Patch
Shinya Kawanaka
Comment 4
2011-11-17 14:42:20 PST
This is necessary to have a test for
https://bugs.webkit.org/show_bug.cgi?id=71991
Hajime Morrita
Comment 5
2011-11-20 20:55:45 PST
Comment on
attachment 115682
[details]
Patch Good catch >< Thanks for this fix!
WebKit Review Bot
Comment 6
2011-11-20 22:28:23 PST
Comment on
attachment 115682
[details]
Patch Clearing flags on attachment: 115682 Committed
r100887
: <
http://trac.webkit.org/changeset/100887
>
WebKit Review Bot
Comment 7
2011-11-20 22:28:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug