[Chromium] Layout test does not return correct misspelling positions if there are multiple misspelled words. https://bugs.webkit.org/show_bug.cgi?id=72655

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-11-20
Reviewed by Hajime Morita.

Tools:

Fixed the calculation of offset.

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::finishLastTextCheck):

LayoutTests:

Fixed the calculation of offset, and added test cases having multiple misspelled words.

* editing/spelling/script-tests/spellcheck-paste.js:
  Added test cases having multiple misspelled words.
(verifyMarker):
(tests):
* editing/spelling/spellcheck-paste-expected.txt: Recreated.

Canonical link: https://commits.webkit.org/89376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100887 268f45cc-cd09-0410-ab3c-d52691b4dbfc